HTML and CSS completed

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: lightgrey;
   margin: 0;
   padding: 0;
 }
@@ -14,6 +14,29 @@ h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
 }
 
+
+#skipnav{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+#skipnav a{
+  background-color: #F3FF00;
+  color: #000;
+  font-weight: bold;
+  padding: 15px 5px;
+  position: absolute;
+  top: -50px;
+  text-decoration:none;
+}
+
+#skipnav a:focus{
+  outline: 5px solid #FFF;
+  top:0;
+}
+
+
 .container {
   max-width: 1080px;
   margin: 0 auto;
@@ -24,7 +47,8 @@ img {
   width: 100%;
 }
 
-.main-nav ul {
+
+nav ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -32,16 +56,21 @@ img {
   padding: 0;
 }
 
-.main-nav ul li {
+nav ul li {
   flex: 1;
   text-align: center;
 }
 
-.main-nav ul li a {
+nav ul li a {
   display: block;
   color: inherit;
   text-decoration: none;
   font-size: 1.25rem;
+  padding: 1rem;
+}
+
+p{
+  line-height: 1.5;
 }
 
 form input,
@@ -49,7 +78,9 @@ form textarea {
   display: block;
   width: 100%;
   margin-bottom: 1rem;
+  margin-top: .5rem;
   padding: .5rem 1rem;
+  font-family: 'Roboto', Helvetica, sans-serif;
 }
 
 form textarea {
@@ -60,12 +91,12 @@ form textarea {
 }
 
 form button {
-  background: none;
-  border: 2px solid black;
+  background: black;
+  color: white;
   padding: 1rem;
   text-transform: uppercase;
 }
 
-.site-footer {
+footer {
   padding: 2rem 0;
 }
